--- a/common/layout.tex
+++ b/common/layout.tex
@@ -4,7 +4,7 @@
 
 
 % double-space text
-\doublespacing
+% \doublespacing
 
 % Center chapter titles
 % Place chapter title, number, and name on same line
