--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -33,6 +33,9 @@
 % Math
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{mathtools}
+\usepackage{siunitx} % for proper typesetting of numbers and units
+\usepackage{booktabs} % commands to create good-looking tables
 
 % Typography
 \usepackage{times}
@@ -52,6 +55,7 @@
 \usetikzlibrary{trees}
 
 \usepackage{todonotes}
+\usepackage{minted}
 
 % PDF links
 \usepackage[hidelinks]{hyperref} % backref=page
