--- a/diss.tex
+++ b/diss.tex
@@ -15,6 +15,9 @@
 % GNSM
 \input{ch2}
 
+% Flows
+\input{ch3}
+
 % Appendices
 \appendix
 
@@ -23,9 +26,6 @@
 
 % Appendix 1
 \input{ap1}
-
-% Appendix 2
-\input{ap2}
 
 % References
 \input{common/references}
