--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,290 @@
+@inproceedings{vaswani,
+ author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Attention is All you Need},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
+
+@article{cocodataset,
+  author    = {Tsung{-}Yi Lin and Michael Maire and Serge J. Belongie and Lubomir D. Bourdev and Ross B. Girshick and James Hays and Pietro Perona and Deva Ramanan and Piotr Doll{'{a} }r and C. Lawrence Zitnick},
+  title     = {Microsoft {COCO:} Common Objects in Context},
+  journal   = {CoRR},
+  volume    = {abs/1405.0312},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1405.0312},
+  archivePrefix = {arXiv},
+  eprint    = {1405.0312},
+  timestamp = {Mon, 13 Aug 2018 16:48:13 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/LinMBHPRDZ14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE{hypothesis,
+  author={Wu, Suya and Diao, Enmao and Elkhalil, Khalil and Ding, Jie and Tarokh, Vahid},
+  journal={IEEE Access}, 
+  title={Score-Based Hypothesis Testing for Unnormalized Models}, 
+  year={2022},
+  volume={10},
+  pages={71936-71950},
+  doi={10.1109/ACCESS.2022.3187991}
+}
+
+@inproceedings{argmax,
+ author = {Hoogeboom, Emiel and Nielsen, Didrik and Jaini, Priyank and Forr\'{e}, Patrick and Welling, Max},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {M. Ranzato and A. Beygelzimer and Y. Dauphin and P.S. Liang and J. Wortman Vaughan},
+ pages = {12454--12465},
+ publisher = {Curran Associates, Inc.},
+ title = {Argmax Flows and Multinomial Diffusion: Learning Categorical Distributions},
+ volume = {34},
+ year = {2021}
+}
+
+@inproceedings{structured,
+ author = {Austin, Jacob and Johnson, Daniel D. and Ho, Jonathan and Tarlow, Daniel and van den Berg, Rianne},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {M. Ranzato and A. Beygelzimer and Y. Dauphin and P.S. Liang and J. Wortman Vaughan},
+ pages = {17981--17993},
+ publisher = {Curran Associates, Inc.},
+ title = {Structured Denoising Diffusion Models in Discrete State-Spaces},
+ volume = {34},
+ year = {2021}
+}
+
+@inproceedings{song2020sliced,
+  title={Sliced score matching: A scalable approach to density and score estimation},
+  author={Song, Yang and Garg, Sahaj and Shi, Jiaxin and Ermon, Stefano},
+  booktitle={Uncertainty in Artificial Intelligence},
+  pages={574--584},
+  year={2020},
+  organization={PMLR}
+}
+
+@inproceedings{
+    sun2023scorebased,
+    title={Score-based Continuous-time Discrete Diffusion Models},
+    author={Haoran Sun and Lijun Yu and Bo Dai and Dale Schuurmans and Hanjun Dai},
+    booktitle={The Eleventh International Conference on Learning Representations },
+    year={2023},
+}
+
+@article{zhao2019pyod,
+    author  = {Zhao, Yue and Nasrullah, Zain and Li, Zheng},
+    title   = {PyOD: A Python Toolbox for Scalable Outlier Detection},
+    journal = {Journal of Machine Learning Research},
+    year    = {2019},
+    volume  = {20},
+    number  = {96},
+    pages   = {1-7},
+}
+
+@inproceedings{perez2018film,
+  title={Film: Visual reasoning with a general conditioning layer},
+  author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={32},
+  number={1},
+  year={2018}
+}
+
+@article{taha2015metrics,
+  title={Metrics for evaluating 3D medical image segmentation: analysis, selection, and tool},
+  author={Taha, Abdel Aziz and Hanbury, Allan},
+  journal={BMC medical imaging},
+  volume={15},
+  number={1},
+  pages={1--28},
+  year={2015},
+  publisher={BioMed Central}
+}
+
+@article{valentini2014recommendations,
+  title={Recommendations on how to establish evidence from auto-segmentation software in radiotherapy},
+  author={Valentini, Vincenzo and Boldrini, Luca and Damiani, Andrea and Muren, Ludvig P},
+  journal={Radiotherapy and Oncology},
+  volume={112},
+  number={3},
+  pages={317--320},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@Article{Everingham10,
+   author = "Everingham, M. and Van~Gool, L. and Williams, C. K. I. and Winn, J. and Zisserman, A.",
+   title = "The Pascal Visual Object Classes (VOC) Challenge",
+   journal = "International Journal of Computer Vision",
+   volume = "88",
+   year = "2010",
+   number = "2",
+   month = jun,
+   pages = "303--338",
+}
+
+@article{chen2017rethinking,
+  title={Rethinking Atrous Convolution for Semantic Image Segmentation},
+  author={Liang-Chieh Chen and George Papandreou and Florian Schroff and Hartwig Adam},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1706.05587},
+}
+@inproceedings{tan2021efficientnetv2,
+  title={Efficientnetv2: Smaller Models and Faster Training},
+  author={Tan, Mingxing and Le, Quoc},
+  booktitle={International Conference on Machine Learning},
+  pages={10096--10106},
+  year={2021},
+  organization={PMLR}
+}
+
+@misc{gelu,
+  doi = {10.48550/ARXIV.1606.08415},
+  author = {Hendrycks, Dan and Gimpel, Kevin},
+  title = {Gaussian Error Linear Units (GELUs)},
+  publisher = {arXiv},
+  year = {2016},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{gorishniy2021revisiting,
+  title={Revisiting deep learning models for tabular data},
+  author={Gorishniy, Yury and Rubachev, Ivan and Khrulkov, Valentin and Babenko, Artem},
+  journal={Advances in Neural Information Processing Systems},
+  volume={34},
+  pages={18932--18943},
+  year={2021}
+}
+
+@inproceedings{hawkins2002outlier,
+  title={Outlier detection using replicator neural networks},
+  author={Hawkins, Simon and He, Hongxing and Williams, Graham and Baxter, Rohan},
+  booktitle={Data Warehousing and Knowledge Discovery: 4th International Conference, DaWaK 2002 Aix-en-Provence, France, September 4--6, 2002 Proceedings 4},
+  pages={170--180},
+  year={2002},
+  organization={Springer}
+}
+
+@inproceedings{chen2017outlier,
+  title={Outlier detection with autoencoder ensembles},
+  author={Chen, Jinghui and Sathe, Saket and Aggarwal, Charu and Turaga, Deepak},
+  booktitle={Proceedings of the 2017 SIAM international conference on data mining},
+  pages={90--98},
+  year={2017},
+  organization={SIAM}
+}
+
+@inproceedings{
+zong2018deep,
+title={Deep Autoencoding Gaussian Mixture Model for Unsupervised Anomaly Detection},
+author={Bo Zong and Qi Song and Martin Renqiang Min and Wei Cheng and Cristian Lumezanu and Daeki Cho and Haifeng Chen},
+booktitle={International Conference on Learning Representations},
+year={2018},
+}
+
+@InProceedings{pmlr-v80-ruff18a,
+  title = 	 {Deep One-Class Classification},
+  author =       {Ruff, Lukas and Vandermeulen, Robert and Goernitz, Nico and Deecke, Lucas and Siddiqui, Shoaib Ahmed and Binder, Alexander and M{\"u}ller, Emmanuel and Kloft, Marius},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
+  pages = 	 {4393--4402},
+  year = 	 {2018},
+  editor = 	 {Dy, Jennifer and Krause, Andreas},
+  volume = 	 {80},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {10--15 Jul},
+  publisher =    {PMLR},
+}
+
+@article{pang2021homophily,
+  title={Homophily outlier detection in non-IID categorical data},
+  author={Pang, Guansong and Cao, Longbing and Chen, Ling},
+  journal={Data Mining and Knowledge Discovery},
+  volume={35},
+  pages={1163--1224},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{alexnet,
+  title={ImageNet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  journal={Communications of the ACM},
+  volume={60},
+  number={6},
+  pages={84--90},
+  year={2017},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{vgg,
+  author       = {Karen Simonyan and
+                  Andrew Zisserman},
+  editor       = {Yoshua Bengio and
+                  Yann LeCun},
+  title        = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  booktitle    = {3rd International Conference on Learning Representations, {ICLR} 2015,
+                  San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
+  year         = {2015},
+}
+
+
+@incollection{aggarwal_introduction_2017,
+	address = {Cham},
+	title = {An {Introduction} to {Outlier} {Analysis}},
+	isbn = {978-3-319-47578-3},
+	booktitle = {Outlier {Analysis}},
+	publisher = {Springer International Publishing},
+	author = {Aggarwal, Charu C.},
+	year = {2017},
+	doi = {10.1007/978-3-319-47578-3_1},
+	pages = {1--34},
+}
+
+@article{ho2020denoising,
+  title={Denoising diffusion probabilistic models},
+  author={Ho, Jonathan and Jain, Ajay and Abbeel, Pieter},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={6840--6851},
+  year={2020}
+}
+
+@article{maddison2014sampling,
+  title={A* sampling},
+  author={Maddison, Chris J and Tarlow, Daniel and Minka, Tom},
+  journal={Advances in neural information processing systems},
+  volume={27},
+  year={2014}
+}
+
+@book{gumbel1954statistical,
+  title={Statistical theory of extreme values and some practical applications: a series of lectures},
+  author={Gumbel, Emil Julius},
+  volume={33},
+  year={1954},
+  publisher={US Government Printing Office}
+}
+
+@inproceedings{jang2017categorical,
+  title={Categorical Reparametrization with Gumble-Softmax},
+  author={Jang, Eric and Gu, Shixiang and Poole, Ben},
+  booktitle={International Conference on Learning Representations (ICLR 2017)},
+  year={2017},
+  organization={OpenReview. net}
+}
+
+@inproceedings{maddison2017concrete,
+  title={The concrete distribution: A continuous relaxation of discrete random variables},
+  author={Maddison, C and Mnih, A and Teh, Y},
+  booktitle={Proceedings of the international conference on learning Representations},
+  year={2017},
+  organization={International Conference on Learning Representations}
+}
+
+
 @article{schlegl2019f,
   title={f-AnoGAN: Fast unsupervised anomaly detection with generative adversarial networks},
   author={Schlegl, Thomas and Seeb{\"o}ck, Philipp and Waldstein, Sebastian M and Langs, Georg and Schmidt-Erfurth, Ursula},
@@ -505,51 +792,9 @@ year={2021},
   year={2018}
 }
 
-@inproceedings{Ren2019,
-  title={Likelihood Ratios for Out-of-Distribution Detection},
-  author={J. Ren and Peter J. Liu and E. Fertig and Jasper Snoek and Ryan Poplin and Mark A. DePristo and Joshua V. Dillon and Balaji Lakshminarayanan},
-  booktitle={NeurIPS},
-  year={2019}
-}
-
 @inproceedings{Zhai2016,
   title={Deep Structured Energy Based Models for Anomaly Detection},
   author={Shuangfei Zhai and Yu Cheng and W. Lu and Zhongfei Zhang},
   booktitle={ICML},
   year={2016}
-}
-
-@inproceedings{Lee2018,
-archivePrefix = {arXiv},
-arxivId = {1711.09325},
-author = {Lee, Kimin and Lee, Honglak and Lee, Kibok and Shin, Jinwoo},
-booktitle = {6th International Conference on Learning Representations, ICLR 2018 - Conference Track Proceedings},
-eprint = {1711.09325},
-publisher = {International Conference on Learning Representations, ICLR},
-title = {{Training confidence-calibrated classifiers for detecting out-of-distribution samples}},
-year = {2018}
-}
-
-@article{Liang2017,
-archivePrefix = {arXiv},
-arxivId = {1706.02690},
-author = {Liang, Shiyu and Li, Yixuan and Srikant, R.},
-eprint = {1706.02690},
-journal = {6th International Conference on Learning Representations, ICLR 2018 - Conference Track Proceedings},
-month = {jun},
-publisher = {International Conference on Learning Representations, ICLR},
-title = {{Enhancing The Reliability of Out-of-distribution Image Detection in Neural Networks}},
-year = {2017}
-}
-
-@inproceedings{Hendrycks2019,
-archivePrefix = {arXiv},
-arxivId = {1610.02136},
-author = {Hendrycks, Dan and Gimpel, Kevin},
-booktitle = {5th International Conference on Learning Representations, ICLR 2017 - Conference Track Proceedings},
-eprint = {1610.02136},
-month = {oct},
-publisher = {International Conference on Learning Representations, ICLR},
-title = {{A baseline for detecting misclassified and out-of-distribution examples in neural networks}},
-year = {2017}
 }
