Revised ch5 until 5.3

--- a/background.tex
+++ b/background.tex
@@ -90,6 +90,8 @@ ECOD~\cite{li_ecod_2022} uses a different notion of density and estimates the cu
 \end{itemize}
 
 \subsection{Restoration based} 
+\cite{grahamDenoisingDiffusionModels2023,wyattAnoddpmAnomalyDetection2022}
+
 
 \subsection{One-Class Objectives}
 
