--- a/ch2.tex
+++ b/ch2.tex
@@ -24,7 +24,7 @@ In this section I will develop the ideas behind the GNSM objective. I will start
 
 Gradients of log likelihoods are not defined for categorical inputs. In order to compute the score of categorical data, I propose to adopt a continuous relaxation for discrete random variables co-discovered by~\cite{jang2017categorical, maddison2017concrete}. These relaxations build on the Gumbel-Max trick to sample from a categorical distribution ~\cite{maddison2014sampling}. The procedure (often referred to as the Gumbel-Softmax) works by adding Gumbel noise~\cite{gumbel1954statistical} to the (log) probabilities and then passing the resulting vector through a softmax to retrieve a sharpened probability distribution over the categorical outcomes. Of particular interest to us, Gumbel-Softmax incorporates a temperature parameter ($\lambda$ in Equation~\eqref{eq:log_concrete}) to control the sharpening of the resulting probabilities. I argue that this temperature can also be interpreted as a noise parameter, by virtue of it increasing the entropy of the post-softmax probabilities. I will make use of this intuition to combine continuous relaxations with denoising score matching. 
 
-Note that for the rest of the chapter, I will be utilizing the formulation of \cite{maddison2017concrete} i.e. Concrete random variables. In particular, I will be using the ExpConcrete Distribution as it is defined in the log domain. This is mainly done for convenience and numerical stability.
+Note that for the rest of the chapter, I will be utilizing the formulation of \cite{maddison2017concrete} i.e. concrete random variables. In particular, I will be using the ExpConcrete Distribution as it is defined in the log domain. This is mainly done for convenience and numerical stability.
 
 Given unnormalized probabilities $\alpha \in (0, \infty)^K$, Gumbel i.i.d samples $\mathit{G}_k$, and a smoothing factor $\lambda \in (0, \infty)$, we can construct a $Y \in \mathbb{R}^n$ such that $\exp(Y) \sim \text{Concrete}(\alpha, \lambda) $:
 
