--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,61 @@
+@inproceedings{dae-kascenas22a,
+  title = {Denoising Autoencoders for Unsupervised Anomaly Detection in Brain {{MRI}}},
+  booktitle = {Proceedings of the 5th International Conference on Medical Imaging with Deep Learning},
+  author = {Kascenas, Antanas and Pugeault, Nicolas and O'Neil, Alison Q.},
+  editor = {Konukoglu, Ender and Menze, Bjoern and Venkataraman, Archana and Baumgartner, Christian and Dou, Qi and Albarqouni, Shadi},
+  date = {2022-07-06/2022-07-08},
+  series = {Proceedings of Machine Learning Research},
+  volume = {172},
+  pages = {653--664},
+  publisher = {{PMLR}},
+  url = {https://proceedings.mlr.press/v172/kascenas22a.html},
+}
+
+@inproceedings{grahamDenoisingDiffusionModels2023,
+  title = {Denoising Diffusion Models for Out-of-Distribution Detection},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Graham, Mark S and Pinaya, Walter HL and Tudosiu, Petru-Daniel and Nachev, Parashkev and Ourselin, Sebastien and Cardoso, Jorge},
+  date = {2023},
+  pages = {2947--2956},
+}
+
+@inproceedings{wyattAnoddpmAnomalyDetection2022,
+  title = {Anoddpm: {{Anomaly}} Detection with Denoising Diffusion Probabilistic Models Using Simplex Noise},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Wyatt, Julian and Leach, Adam and Schmon, Sebastian M and Willcocks, Chris G},
+  date = {2022},
+  pages = {650--656},
+}
+
+@inproceedings{pinaya2022fast,
+  title={Fast unsupervised brain anomaly detection and segmentation with diffusion models},
+  author={Pinaya, Walter HL and Graham, Mark S and Gray, Robert and Da Costa, Pedro F and Tudosiu, Petru-Daniel and Wright, Paul and Mah, Yee H and MacKinnon, Andrew D and Teo, James T and Jager, Rolf and others},
+  booktitle={International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  pages={705--714},
+  year={2022},
+  organization={Springer}
+}
+
+
+@article{liu2024deep,
+  title={Deep industrial image anomaly detection: A survey},
+  author={Liu, Jiaqi and Xie, Guoyang and Wang, Jinbao and Li, Shangnian and Wang, Chengjie and Zheng, Feng and Jin, Yaochu},
+  journal={Machine Intelligence Research},
+  volume={21},
+  number={1},
+  pages={104--135},
+  year={2024},
+  publisher={Springer}
+}
+
+@InProceedings{Bergmann_2019_CVPR,
+author = {Bergmann, Paul and Fauser, Michael and Sattlegger, David and Steger, Carsten},
+title = {MVTec AD -- A Comprehensive Real-World Dataset for Unsupervised Anomaly Detection},
+booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {June},
+year = {2019}
+}
+
 @inproceedings{vaswani,
  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
  booktitle = {Advances in Neural Information Processing Systems},
